3.0.0
* Incorporated as a module in the main art project - changed group id to net.sf.art

1.1.0
* Use mondrian-art

1.0.1
* Added i18n strings for print properties form
* Added swahili translations
* Updated wcf-art to 1.1.2

1.0.0
* Based on jpivot 1.8.0
* Requires Java 7
* Built using maven
* Use fop 2.1
* Use mondrian 3.4.1
* Use wcf-art
* Addressed javadoc warnings
* Modified message for pdf and excel export